[tool.poetry]
name = "voxelart"
version = "0.1.0"
description = "Create voxel arts for Minecrafte BE worlds"
authors = ["Jonas da Silva <phoenixr41414141@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/bedrock-ws/voxelart.git"
keywords = ["minecraft", "voxelart", "art"]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 6 - Mature",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Artistic Software",
  "Topic :: Education",
  "Topic :: Games/Entertainment",
  "Typing :: Typed",
]

[tool.poetry.scripts]
voxelart = "voxelart.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
bedrockpy = "^1.0.0"
rgbmatch = "^0.0.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
